--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -21,5 +21,9 @@ jobs:
       run: dotnet build --configuration Release
   
   test:
+    
+    runs-on: ubuntu-latest
+    
+    steps:
     - name: Test with dotnet
       run: dotnet test --configuration Release
